Запись координат в БД

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Location-214</string>
+    <string name="location">Latitude: %f\nLongitude: %f</string>
 </resources>
